
Options
* New: The options/mini-map button is now more buttony

Rez Master
* New: Added support for the Mage Storm Caller BR/CR - Spark of Life.
* Change: Adjusted how Cool down begin messages are filtered.
* Change: Once a rez has completed its cool down, Rez Master will re-sort the list placing Mages at the top.

Infernal Dawn 
* Laethys (Added by Ciladan)
** New: Added Timer for Storm of Treasure, including first.
** New: Added Timer for Metallic Orb, including first.
** New: Added Timer for Molten Gold, including first.
** New: Added Timer for Add spawns, including first.
** New: Added Timer for Annihilating Flare, including first.
** New: Added Timer for Golden Breath.
** New: Added Alert for Annihilating Flare.
** New: Added Alert for Metallic Orb.
** New: Added Alert for Storm of Treasure.
** New: Added Phase change monitoring and display.

French Translations
* Updated!

Russian Translations
* Updates and Fixes
----
v1.0.7

System
* Change: Re-ordered the initialization system.
* New: On start-up the KBM event system now fires Player Join events if you're already in a group (for both /reloadui, and log-in).

Rez Master
* New: Enabling RezMaster (from a disabled state) will re-inspect your raid and retrieve fresh Rez data. Useful before a pull if anything seems amiss.
* Fixed: Errors sometimes triggering on leaving a dungeon.
* Fixed: Enable/Disable option now works.
----
v1.0.6

System
* Fixed: Version notifications where only triggering from guild members. Now works with raid members.

Unit Tracker
* Change: Improved tracking of non-seen units. This should improve CPU performance and accuracy of auxiliary tracking.
* Change: Unseen units are now correctly placed in the Idle queue until activity stops or they die.
* Change: Improved engine so that conditional checks are grouped and ordered better. CPU performance boost.
* Fixed: Removed units where not ungrouping correctly.

New! Rez Master